upgraded build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,11 @@ buildscript {
     }
 }
 
+plugins {
+    id 'java'
+    id 'maven-publish'
+}
+
 subprojects {
     apply plugin: 'java-library'
     apply plugin: 'io.spring.dependency-management'
